# document-echo

./: .gitignore  INSTRUCTIONS.md  README.md  natural reader.html  package-lock.json  package.json  types.ts
app/: globals.css  layout.tsx  page.tsx
components/: AudioBar.tsx  AudioEngine.tsx  NavBar.tsx  PdfViewer.tsx  TextViewer.tsx
lib/: text-normalizer.ts
server/: main.py  pyproject.toml
store/: use-audio-store.ts  useAudioStore.ts
types/: index.ts
utils/: TextNormalizer.ts
