[project]
name = "kokoro-tts-server"
version = "0.1.0"
description = "Local Kokoro TTS backend for Document Echo"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "kokoro-onnx>=0.4.0",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
]

[dependency-groups]
dev = []
